2023-05-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): New release 0.4.18

	* src/utils.cpp: Use Rcpp::stop instead of throw

2023-04-29  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro release and date

2023-04-28  Jeroen Ooms  <jeroenooms@gmail.com>

	* src/Makevars.win: Refactor and simplify for current use
	* tools/winlibs.R: Update to QuantLib 1.29 download

2023-04-27  Jeroen Ooms  <jeroenooms@gmail.com>

	* configure.ac: Update build to fetch arm|x86_64 macOS artifacts
	* configure: Idem
	* .github/workflows/ci.yam: Re-enable macOS tests
	* inst/tinytest/test_dates.R: Skip one test file on macOS

2023-04-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro release and date

	* src/sabr.cpp (swptnVolCube): Make SabrSwaptionVolatilityCube change
	conditional on QuantLib 1.30 or later, else use SwaptionVolCube1

	* R/RcppExports.R: Updated setLoadAction from updated Rcpp

2023-04-19  Dirk Eddelbuettel  <edd@debian.org>

	* src/sabr.cpp (swptnVolCube): Update from SwaptionVolCube1 to
	SabrSwaptionVolatilityCube

	* src/vanilla.cpp (americanOptionEngine): Tweaked deprecation
	warnings (as in QL's own test file) to continue with dividend option

2023-01-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor release

2023-01-06  Dirk Eddelbuettel  <edd@debian.org>

	* R/arrays.R (plotOptionSurface): Provide default argument in case
	none is given by user

2023-01-06  Duncan Murdoch     <murdoch.duncan@gmail.com>

	* R/arrays.R:  Switch rgl::rgl.* to rgl::*3d functions
	* demo/OptionSurfaces.R: Idem

2022-10-25  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.4.17
	* configure.ac: Idem
	* configure: Idem

	* src/Makevars.in (CXX_STD): Switch to C++14
	* src/Makevars.win (CXX_STD): Idem

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3

2022-05-05  Dirk Eddelbuettel  <edd@debian.org>
