@@ -1,3 +1,7 @@
+2023-06-27  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .github/workflows/docker.yaml: Update actions to current version
+
 2023-05-01  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): New release 0.4.18
